Update pom with launch4j plugin
- Creates an application.